Created third.html page

--- a/david/third.html
+++ b/david/third.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Page</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>GitHub Page</h1>
-    <a href="public/second.html">Second page</a>
-    <a href="david/third.html">Third page</a>
+    <h1>Third page</h1>
 </body>
 </html>
