Created fourth.html and fifth.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>GitHub Page</h1>
     <a href="public/second.html">Second page</a>
     <a href="david/third.html">Third page</a>
+    <a href="public/fourth.html">Fourth page</a>
+    <a href="david/fifth.html">Fifth page</a>
 </body>
 </html>
